--- a/generalNotebooks/dataSort.ipynb
+++ b/generalNotebooks/dataSort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,19 +919,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cases that need resampled:  0\n",
-      "cases that need registration:  4\n",
-      "cases that need others:  15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "base_path = \"../../../../../../Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/test2/parkinson/spect\"\n",
     "cases = os.listdir(base_path)\n",
@@ -964,37 +954,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted(cases_to_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['3116', '3118', '3119', '3122', '3123', '3125', '3126', '3129', '3130', '3131', '3132', '3150', '3154', '3168', '3173', '3175', '3176', '3182', '3184', '3185', '3190', '3305', '3308', '3325', '3332', '3352', '3359', '3365', '3367', '3371', '3372', '3373', '3374', '3375', '3376', '3377', '3378', '3385', '3386', '3387', '3558', '3559', '3567', '3574', '3584', '3587', '3588', '3589', '3591', '3592', '3593', '3752', '3757', '3758', '3762', '3763', '3770', '3775', '3776', '3777', '3778', '3781', '3787', '3788', '3802', '3808', '3819', '3823', '3824', '3825', '3827', '3828', '3829', '3831', '3833', '3834', '3835', '3837', '3838', '3866', '3868', '3869', '3870', '4011', '4012', '4013', '4020', '4021', '4022', '4027', '4029', '4033', '40366', '4037', '4038', '4065', '40800', '40806', '40882', '40893', '41184', '41289', '41293', '4135', '4136', '41488', '41664', '50319', '50485', '50901', '50983', '55395', '57037']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_pd_patients = sorted(os.listdir(base_path))\n",
     "print(new_pd_patients)"
@@ -1002,17 +973,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File written successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# open file\n",
     "with open('newPdPatients.txt', 'w+') as f:\n",
@@ -1050,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.undefined"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
