--- a/notebooks/classifier.ipynb
+++ b/notebooks/classifier.ipynb
@@ -110,12 +110,12 @@
     "    gen_path = '../../../../../../Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/' \n",
     "    synthetic_data = \"../imgs_results/full_rois/preprocessed/mri_to_spect/\"\n",
     "    \n",
-    "    if task == \"control_to_pd\":\n",
-    "        csv_train = os.path.join(gen_path + 'control_pd_MRI_fullRois_TRAIN.csv')\n",
-    "        csv_test = os.path.join(gen_path + 'control_pd_MRI_fullRois_TEST.csv')\n",
-    "    if task == \"mri_to_spect\":\n",
-    "        csv_train = os.path.join(gen_path + 'embc_extension/extension_control_pd_SPECT_fullRois_TRAIN.csv')\n",
-    "        csv_test = os.path.join(gen_path + 'embc_extension/extension_control_pd_SPECT_fullRois_TEST.csv')\n",
+    "    if task == \"orginal_embc\":\n",
+    "        csv_train = os.path.join(gen_path + 'embc/control_pd_MRI_fullRois_TRAIN.csv')\n",
+    "        csv_test = os.path.join(gen_path + 'embc/control_pd_MRI_fullRois_TEST.csv')\n",
+    "    if task == \"embc_extension\":\n",
+    "        csv_train = os.path.join(gen_path + 'pdControlSpectPreprocessed2TRAIN.csv')\n",
+    "        csv_test = os.path.join(gen_path + 'pdControlSpectPreprocessed2TEST.csv')\n",
     "    else:\n",
     "        csv_train = os.path.join(synthetic_data + 'full_train_mriSpectFullRois.csv')\n",
     "        csv_test = os.path.join(synthetic_data + 'full_test_mriSpectFullRois.csv')\n",
@@ -388,7 +388,7 @@
     "        print(\"making the custom model\")\n",
     "        custom_model = make_model(arquitectura, HEIGHT, WIDTH, clases)\n",
     "        #callbacks\n",
-    "        save_path = \"../models/embc_extension/classifier/mri_spect/raw/first_approach/\" + arquitectura + \".h5\"\n",
+    "        save_path = \"../models/embc/classifier/mri_spect/spect_preprocessed2/\" + arquitectura + \".h5\"\n",
     "        lr = 0.0001    \n",
     "        \n",
     "        custom_model.compile(optimizer=Adam(learning_rate=lr), loss='categorical_crossentropy', \n",
@@ -465,7 +465,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df, test_df = load_dataframes(task=\"mri_to_spect\")\n",
+    "embc_train_df, embc_test_df = load_dataframes(task=\"original_embc\")\n",
+    "embc_train_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embc_test_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **From embc extended version, get the embc original SPECT cases but with preprocessed approach #2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extended_train_df, extended_test_df = load_dataframes(task=\"embc_extension\")\n",
+    "extended_train_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extended_test_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**From extended version only get the original embc cases**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading the original embc cases\n",
+    "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/\"\n",
+    "original_embc_cases = root_path + \"train/parkinson/parcellation/preprocessed/full_rois/spect_png/\"\n",
+    "embc_cases = sorted(os.listdir(original_embc_cases))\n",
+    "print(\"amount of original cases: \", len(embc_cases))\n",
+    "\n",
+    "#getting all the pd cases \n",
+    "extension_embc_cases = root_path + \"train/parkinson/extension/spect_png/\"\n",
+    "augmented_cases = sorted(os.listdir(extension_embc_cases))\n",
+    "print(\"amount of augmented_cases: \", len(augmented_cases))\n",
+    "\n",
+    "extra_cases = list(set(augmented_cases) - set(embc_cases))\n",
+    "print(\"amount of extra cases: \", len(extra_cases))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = extended_train_df[~extended_train_df['path'].str.contains('|'.join(extra_cases))]\n",
+    "test_df = extended_test_df[~extended_test_df['path'].str.contains('|'.join(extra_cases))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_df.groupby('label').count()"
    ]
   },
@@ -479,6 +561,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Extended Parkinson cases**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = extended_train_df[extended_train_df['path'].str.contains('|'.join(extra_cases))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Until here**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -487,17 +601,18 @@
     "#sorting by case number and slice number for the following situations:\n",
     "#preprocessing: from 41 to 132\n",
     "#raw cases: 109 to 180\n",
+    "# SPECT with preprocessed2: from 35 to 50\n",
     "\n",
     "#sorting by case number and slice number\n",
     "#train\n",
     "train_df[['case_number', 'slice_number']] = train_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
-    "train_df_v2 = train_df[(train_df['slice_number'] > 41) & (train_df['slice_number'] < 132)]\n",
+    "train_df_v2 = train_df[(train_df['slice_number'] > 35) & (train_df['slice_number'] < 50)]\n",
     "train_df_v2.drop('slice_number', axis=1, inplace=True)\n",
     "train_df_v2.drop('case_number', axis=1, inplace=True)\n",
     "\n",
     "#test\n",
     "test_df[['case_number', 'slice_number']] = test_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
-    "test_df_v2 = test_df[(test_df['slice_number'] > 41) & (test_df['slice_number'] < 132)]\n",
+    "test_df_v2 = test_df[(test_df['slice_number'] > 35) & (test_df['slice_number'] < 50)]\n",
     "test_df_v2.drop('slice_number', axis=1, inplace=True)\n",
     "test_df_v2.drop('case_number', axis=1, inplace=True)"
    ]
@@ -537,8 +652,8 @@
    "source": [
     "#this cell is for a general classification knowledge\n",
     "HEIGHT, WIDTH = 256, 256\n",
-    "#nets = ['Vgg16', 'MobileNet', 'ResNet50']\n",
-    "nets = ['MobileNet']\n",
+    "nets = ['Vgg16', 'MobileNet', 'ResNet50']\n",
+    "#nets = ['MobileNet']\n",
     "num_clases=2\n",
     "fine_tunning = False\n",
     "\n",
@@ -611,7 +726,7 @@
    "source": [
     "#loading the model\n",
     "name = \"MobileNet\"\n",
-    "model_path = '../models/embc_extension/classifier/mri_spect/raw/first_approach/' + name + '.h5'\n",
+    "model_path = '../models/embc/classifier/mri_spect/spect_preprocessed2/' + name + '.h5'\n",
     "model = keras.models.load_model(model_path, compile=True)"
    ]
   },
@@ -649,9 +764,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"../imgs_results/full_rois/raw/mri_to_spect/full_test_fullRois.csv\", header=None)\n",
+    "test_df = pd.read_csv(\"../imgs_results/full_rois/preprocessed/mri_to_spect/prodromal_synthetic_spect_fullRois_TRAIN.csv\", header=None)\n",
     "test_df.columns = ['path', 'label']\n",
     "test_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "test_df[['case_number', 'slice_number']] = test_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
+    "test_df_v2 = test_df[(test_df['slice_number'] > 80) & (test_df['slice_number'] < 101)]\n",
+    "test_df_v2.drop('slice_number', axis=1, inplace=True)\n",
+    "test_df_v2.drop('case_number', axis=1, inplace=True)\n",
+    "test_df_v2.groupby('label').count()"
    ]
   },
   {
@@ -682,6 +811,186 @@
    "source": [
     "test_df = pd.concat([test_control_df, test_pd_df], axis=0)\n",
     "test_df.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loading the SWEDD data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/\"\n",
+    "test_swedd_df = pd.read_csv(root_path+\"swedd_SPECT_preprocessed2_TEST.csv\", header=None)\n",
+    "test_swedd_df.columns = ['path', 'label']\n",
+    "test_swedd_df.groupby('label').count()\n",
+    "test_df = test_swedd_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "test_df[['case_number', 'slice_number']] = test_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
+    "test_df_v2 = test_df[(test_df['slice_number'] > 35) & (test_df['slice_number'] < 50)]\n",
+    "test_df_v2.drop('slice_number', axis=1, inplace=True)\n",
+    "test_df_v2.drop('case_number', axis=1, inplace=True)\n",
+    "test_df_v2.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Until here**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loading the PRODROMAL synthetic SPECT data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_path = \"/home/Data/franklin/Doctorado/parkinson/projects/T1-SPECT-PD-translation/imgs_results/full_rois/preprocessed/mri_to_spect/\"\n",
+    "test_prodromal_df = pd.read_csv(root_path+\"prodromal_synthetic_spect_fullRois_TRAIN.csv\", header=None)\n",
+    "test_prodromal_df.columns = ['path', 'label']\n",
+    "test_prodromal_df.groupby('label').count()\n",
+    "test_df = test_prodromal_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "test_df[['case_number', 'slice_number']] = test_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
+    "test_df_v2 = test_df[(test_df['slice_number'] > 32) & (test_df['slice_number'] < 50)]\n",
+    "test_df_v2.drop('slice_number', axis=1, inplace=True)\n",
+    "test_df_v2.drop('case_number', axis=1, inplace=True)\n",
+    "test_df_v2.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Until here**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loading the extra PD patients in EMBC extension**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading the original embc cases\n",
+    "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/\"\n",
+    "original_embc_cases = root_path + \"train/parkinson/parcellation/preprocessed/full_rois/spect_png/\"\n",
+    "embc_cases = sorted(os.listdir(original_embc_cases))\n",
+    "print(\"amount of original cases: \", len(embc_cases))\n",
+    "\n",
+    "#getting all the pd cases \n",
+    "extension_embc_cases = root_path + \"train/parkinson/extension/spect_png/\"\n",
+    "augmented_cases = sorted(os.listdir(extension_embc_cases))\n",
+    "print(\"amount of extra cases: \", len(augmented_cases))\n",
+    "\n",
+    "extra_cases = list(set(augmented_cases) - set(embc_cases))\n",
+    "print(\"amount of extra cases: \", len(extra_cases))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(embc_cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_vertically(text):\n",
+    "    for char in text:\n",
+    "        print(char)\n",
+    "\n",
+    "# Example usage\n",
+    "text = augmented_cases\n",
+    "print_vertically(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting the extra cases path and make the related csv file\n",
+    "file_csv2 = open(root_path + \"/embc_extension/extension_pd_SPECT_fullRois_TEST.csv\", '+w')\n",
+    "for case in extra_cases:\n",
+    "    print(\"case: \", case)\n",
+    "    case_path = extension_embc_cases + case\n",
+    "    images = sorted(os.listdir(case_path))\n",
+    "    for image in images:\n",
+    "        image_path = os.path.join(case_path, image)\n",
+    "        col_name = ',' + \"parkinson\" + \"\\n\"\n",
+    "        file_csv2.write(image_path + col_name)\n",
+    "file_csv2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/\"\n",
+    "test_prodromal_df = pd.read_csv(root_path+\"embc_extension/extension_pd_SPECT_fullRois_TEST.csv\", header=None)\n",
+    "test_prodromal_df.columns = ['path', 'label']\n",
+    "test_prodromal_df.groupby('label').count()\n",
+    "test_df = test_prodromal_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "test_df[['case_number', 'slice_number']] = test_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
+    "test_df_v2 = test_df[(test_df['slice_number'] > 29) & (test_df['slice_number'] < 49)]\n",
+    "test_df_v2.drop('slice_number', axis=1, inplace=True)\n",
+    "test_df_v2.drop('case_number', axis=1, inplace=True)\n",
+    "test_df_v2.groupby('label').count()"
    ]
   },
   {
