--- a/notebooks/cycleGan.ipynb
+++ b/notebooks/cycleGan.ipynb
@@ -250,7 +250,7 @@
     "rgb parameter sets as True for work whit grayscale images\n",
     "\"\"\"\n",
     "# dataset path\n",
-    "path = \"../data/preprocessed/full_rois/mri_to_spect/\"\n",
+    "path = \"../data/preprocessed/full_rois/mri_to_spect/preprocessed2/\"\n",
     "#if we want to load rgb images\n",
     "rgb = True\n",
     "\n",
@@ -1068,7 +1068,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "checkpoint_path = \"/home/Data/franklin/Doctorado/parkinson/projects/parcellation_translation/models/cyclegan/ensembled/\"\n",
+    "checkpoint_path = \"/home/Data/franklin/Doctorado/parkinson/projects/T1-SPECT-PD-translation/models/embc/cyclegan/preprocessed/mri_to_spect/preprocessed2/\"\n",
     "\n",
     "ckpt = tf.train.Checkpoint(generator_g=generator_g,\n",
     "                           generator_f=generator_f,\n",
@@ -1077,9 +1077,9 @@
     "                           generator_g_optimizer=generator_g_optimizer,\n",
     "                           generator_f_optimizer=generator_f_optimizer,\n",
     "                           discriminator_x_optimizer=discriminator_x_optimizer,\n",
-    "                           discriminator_y_optimizer=discriminator_y_optimizer,\n",
-    "                           cls_model=cls_model, \n",
-    "                           cls_model_optimizier=cls_model_optimizier)\n",
+    "                           discriminator_y_optimizer=discriminator_y_optimizer)\n",
+    "                           #cls_model=cls_model, \n",
+    "                           #cls_model_optimizier=cls_model_optimizier)\n",
     "\n",
     "ckpt_manager = tf.train.CheckpointManager(ckpt, checkpoint_path, max_to_keep=2)\n",
     "\n",
@@ -1110,7 +1110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 40"
+    "EPOCHS = 10"
    ]
   },
   {
@@ -1146,7 +1146,7 @@
    "outputs": [],
    "source": [
     "@tf.function\n",
-    "def train_step(real_x, real_y, alpha1, alpha2, alpha3):\n",
+    "def train_step(real_x, real_y):#, alpha1, alpha2, alpha3):\n",
     "    # persistent is set to True because the tape is used more than\n",
     "    # once to calculate the gradients.\n",
     "    real_x_img = real_x[0]\n",
@@ -1174,14 +1174,14 @@
     "        disc_fake_x = discriminator_x(fake_x, training=True)\n",
     "        disc_fake_y = discriminator_y(fake_y, training=True)\n",
     "        #image classification (controlVsPd)\n",
-    "        pred_y = cls_model(fake_y)\n",
+    "        #pred_y = cls_model(fake_y)\n",
     "\n",
     "        # calculate the loss (generator)\n",
     "        gen_g_loss = generator_loss(disc_fake_y)\n",
     "        gen_f_loss = generator_loss(disc_fake_x)\n",
     "        \n",
     "        # calculate the loss (classificator)\n",
-    "        y_cls_loss = classifier_loss(real_y_label, pred_y)\n",
+    "        #y_cls_loss = classifier_loss(real_y_label, pred_y)\n",
     "            \n",
     "        total_cycle_loss = calc_cycle_loss(real_x_img, cycled_x) + calc_cycle_loss(real_y_img, cycled_y)\n",
     "\n",
@@ -1194,12 +1194,12 @@
     "        disc_y_loss = discriminator_loss(disc_real_y, disc_fake_y)\n",
     "        \n",
     "        #generator g loss affected by the classifier performance\n",
-    "        full_gen_g_loss = alpha1*total_gen_g_loss + alpha2*disc_y_loss + alpha3*y_cls_loss\n",
+    "        #full_gen_g_loss = alpha1*total_gen_g_loss + alpha2*disc_y_loss + alpha3*y_cls_loss\n",
     "    \n",
     "        \n",
     "\n",
     "    ### Calculate the gradients for generator and discriminator\n",
-    "    generator_g_gradients = tape.gradient(full_gen_g_loss, \n",
+    "    generator_g_gradients = tape.gradient(total_gen_g_loss, \n",
     "                                          generator_g.trainable_variables)\n",
     "    generator_f_gradients = tape.gradient(total_gen_f_loss, \n",
     "                                          generator_f.trainable_variables)\n",
@@ -1209,7 +1209,7 @@
     "    discriminator_y_gradients = tape.gradient(disc_y_loss,\n",
     "                                              discriminator_y.trainable_variables)\n",
     "    #calculate the gradients for classifier network\n",
-    "    cls_model_gradients = tape.gradient(y_cls_loss, cls_model.trainable_variables)\n",
+    "    #cls_model_gradients = tape.gradient(y_cls_loss, cls_model.trainable_variables)\n",
     "        \n",
     "\n",
     "    # Apply the gradients to the optimizer\n",
@@ -1225,8 +1225,8 @@
     "    discriminator_y_optimizer.apply_gradients(zip(discriminator_y_gradients,\n",
     "                                                discriminator_y.trainable_variables))\n",
     "    \n",
-    "    cls_model_optimizier.apply_gradients(zip(cls_model_gradients,\n",
-    "                                               cls_model.trainable_variables))"
+    "    # cls_model_optimizier.apply_gradients(zip(cls_model_gradients,\n",
+    "    #                                            cls_model.trainable_variables))"
    ]
   },
   {
@@ -1237,7 +1237,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_and_checkpoint(alpha1, alpha2, alpha3, ckpt_manager=None):\n",
+    "def train_and_checkpoint(ckpt_manager=None):\n",
     "    \n",
     "    ckpt.restore(ckpt_manager.latest_checkpoint)\n",
     "    if ckpt_manager.latest_checkpoint:\n",
@@ -1250,7 +1250,7 @@
     "        n = 0    \n",
     "\n",
     "        for image_x, image_y in tf.data.Dataset.zip((train_mri_image_label_ds, train_spect_image_label_ds)):\n",
-    "            train_step(image_x, image_y, alpha1, alpha2, alpha3)\n",
+    "            train_step(image_x, image_y)\n",
     "            if n % 10 == 0:\n",
     "                print ('.', end='')\n",
     "            n += 1\n",
@@ -1300,8 +1300,8 @@
    "outputs": [],
    "source": [
     "#alpha1, alpha2, alpha3 for generator, discriminator and classifier loss\n",
-    "alpha1, alpha2, alpha3 = 1, 1, 1\n",
-    "train_and_checkpoint(alpha1, alpha2, alpha3, ckpt_manager)"
+    "#alpha1, alpha2, alpha3 = 1, 1, 1\n",
+    "train_and_checkpoint(ckpt_manager)"
    ]
   },
   {
@@ -1422,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2.7.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
