--- a/notebooks/cycleGanPredict.ipynb
+++ b/notebooks/cycleGanPredict.ipynb
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_path = \"../models/cyclegan/preprocessed/mri_to_spect/\"\n",
+    "checkpoint_path = \"/home/Data/franklin/Doctorado/parkinson/projects/T1-SPECT-PD-translation/models/embc/cyclegan/preprocessed/mri_to_spect/\"\n",
     "ckpt = tf.train.Checkpoint(generator_g=generator_g,\n",
     "                           generator_f=generator_f,\n",
     "                           discriminator_x=discriminator_x,\n",
@@ -420,8 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_path = '../../../../../../Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/' \n",
-    "csv_test = os.path.join(gen_path + 'control_pd_SPECT_fullRois_TEST.csv')\n",
+    "gen_path = '../../../../../../Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/embc_extension/' \n",
+    "csv_test = os.path.join(gen_path + 'extension_prodromal_MRI_fullRois_TRAIN.csv')\n",
     "mri_test_df = pd.read_csv(csv_test, sep=',', header=None)\n",
     "mri_test_df.columns = [\"path\", \"label\"]"
    ]
@@ -456,7 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = \"../imgs_results/full_rois/mri_to_spect/mri_filtered_slices/\"\n",
+    "save_path = \"../imgs_results/full_rois/preprocessed/mri_to_spect/prodromal_mri_filtered_slices/\"\n",
     "\n",
     "#since we want to convert MRI to SPECT then we load the generator g\n",
     "generator = generator_g\n",
@@ -472,6 +472,8 @@
     "     #/control_case_3104_slice_042.png\n",
     "     general_info = path.split('/')[-1]\n",
     "     current_general_info = general_info.split('.')[0]\n",
+    "     case = current_general_info.split('_')[-3]\n",
+    "     #print(\"general_info: \", current_general_info)\n",
     "     \n",
     "     clase = current_general_info.split('_')[0]\n",
     "     id_img = current_general_info.split('_')[-1]\n",
@@ -502,11 +504,15 @@
     "     fake_img = Image.fromarray(fake)\n",
     "\n",
     "     #for save\n",
-    "     directory = save_path + clase \n",
+    "     # print(\"save path: \", save_path)\n",
+    "     # print(\"case: \", case)\n",
+    "     # print(\"clase: \", clase)\n",
+    "     directory = save_path + case \n",
     "     if not os.path.exists(directory):\n",
     "         os.makedirs(directory)\n",
     "\n",
     "     salve_path = directory + '/' + general_info\n",
+    "     #print(\"saving on: \", salve_path)\n",
     "     fake_img.save(salve_path) "
    ]
   },
