aware PD scale stratification

--- a/notebooks/classifier.ipynb
+++ b/notebooks/classifier.ipynb
@@ -107,22 +107,28 @@
     "    # Set the path for the CSV files\n",
     "    print(\"working on task: \", task)\n",
     "    \n",
-    "    gen_path = '../../../../../../Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/' \n",
-    "    synthetic_data = \"../imgs_results/full_rois/preprocessed/mri_to_spect/\"\n",
+    "    gen_path = '/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/' \n",
+    "    #gen_path = '../../../../../../Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/'\n",
+    "    #synthetic_data = \"../imgs_results/full_rois/preprocessed/mri_to_spect/\"\n",
+    "    paper_data = \"/home/Data/Datasets/Parkinson/radiological/spect_paper/\"\n",
     "    \n",
     "    if task == \"orginal_embc\":\n",
-    "        csv_train = os.path.join(gen_path + 'embc/control_pd_MRI_fullRois_TRAIN.csv')\n",
-    "        csv_test = os.path.join(gen_path + 'embc/control_pd_MRI_fullRois_TEST.csv')\n",
-    "    if task == \"embc_extension\":\n",
+    "        print(\"working on orginal_embc\")\n",
+    "        csv_train = os.path.join(gen_path + 'stratifying_stages/pdControlSpectTRAIN.csv')\n",
+    "        csv_test = os.path.join(gen_path + 'stratifying_stages/pdControlSpectTEST.csv')\n",
+    "        # csv_train = os.path.join(gen_path + 'embc_csvFiles/raw_control_pd_SPECT_fullRois_TRAIN.csv')\n",
+    "        # csv_test = os.path.join(gen_path + 'embc_csvFiles/raw_control_pd_SPECT_fullRois_TEST.csv')\n",
+    "    elif task == \"embc_extension\":\n",
     "        csv_train = os.path.join(gen_path + 'pdControlSpectPreprocessed2TRAIN.csv')\n",
     "        csv_test = os.path.join(gen_path + 'pdControlSpectPreprocessed2TEST.csv')\n",
     "    else:\n",
-    "        csv_train = os.path.join(synthetic_data + 'full_train_mriSpectFullRois.csv')\n",
-    "        csv_test = os.path.join(synthetic_data + 'full_test_mriSpectFullRois.csv')\n",
+    "        csv_train = os.path.join(paper_data + 'pdControlSpectTRAIN.csv')\n",
+    "        csv_test = os.path.join(paper_data + 'pdControlSpectTEST.csv')\n",
     "        \n",
     "        \n",
     "\n",
     "    # Load the training data from the CSV file and assign column names to the DataFrame\n",
+    "    print(\"reading from : \", csv_train)\n",
     "    train_df = pd.read_csv(csv_train, header=None)\n",
     "    train_df.columns = ['path', 'label']\n",
     "    \n",
@@ -143,6 +149,7 @@
     "    #========= until here =========\n",
     "\n",
     "    # Load the test data from the CSV file and assign column names to the DataFrame\n",
+    "    print(\"reading from : \", csv_test)\n",
     "    test_df = pd.read_csv(csv_test, header=None)\n",
     "    test_df.columns = ['path', 'label']\n",
     "\n",
@@ -320,10 +327,10 @@
     "    horizontal_flip = True #@param {type:\"boolean\"}\n",
     "    vertical_flip = False #@param {type:\"boolean\"}\n",
     "    \n",
-    "    def custom_rescale(img):\n",
-    "      return (img / 127.5) - 1.0\n",
+    "    # def custom_rescale(img):\n",
+    "    #   return (img / 127.5) - 1.0\n",
     "   \n",
-    "    datagen = ImageDataGenerator(preprocessing_function=custom_rescale,\n",
+    "    datagen = ImageDataGenerator(rescale=1./255,\n",
     "                                shear_range=shear_range,\n",
     "                                zoom_range=zoom_range,\n",
     "                                width_shift_range=width_shift_range,\n",
@@ -343,7 +350,7 @@
     "                                                  shuffle=True)\n",
     "\n",
     "    # Generator for validation data\n",
-    "    val_datagen = ImageDataGenerator(preprocessing_function=custom_rescale)\n",
+    "    val_datagen = ImageDataGenerator(rescale=1./255)#ImageDataGenerator(preprocessing_function=custom_rescale)\n",
     "\n",
     "    valid_generator = val_datagen.flow_from_dataframe(directory=None,\n",
     "                                                      dataframe=df_val,\n",
@@ -388,7 +395,7 @@
     "        print(\"making the custom model\")\n",
     "        custom_model = make_model(arquitectura, HEIGHT, WIDTH, clases)\n",
     "        #callbacks\n",
-    "        save_path = \"../models/embc/classifier/mri_spect/spect_preprocessed2/\" + arquitectura + \".h5\"\n",
+    "        save_path = \"../models/embc/classifier/mri_spect_stratified/raw/\" + arquitectura + \".h5\"\n",
     "        lr = 0.0001    \n",
     "        \n",
     "        custom_model.compile(optimizer=Adam(learning_rate=lr), loss='categorical_crossentropy', \n",
@@ -465,8 +472,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embc_train_df, embc_test_df = load_dataframes(task=\"original_embc\")\n",
-    "embc_train_df.groupby('label').count()"
+    "train_df, test_df = load_dataframes(task=\"orginal_embc\")\n",
+    "train_df.groupby('label').count()"
    ]
   },
   {
@@ -475,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embc_test_df.groupby('label').count()"
+    "test_df.groupby('label').count()"
    ]
   },
   {
@@ -600,7 +607,7 @@
    "source": [
     "#sorting by case number and slice number for the following situations:\n",
     "#preprocessing: from 41 to 132\n",
-    "#raw cases: 109 to 180\n",
+    "#raw cases: 109 to 180 or 109 to 127----> it needs to be checked\n",
     "# SPECT with preprocessed2: from 35 to 50\n",
     "\n",
     "#sorting by case number and slice number\n",
@@ -652,8 +659,7 @@
    "source": [
     "#this cell is for a general classification knowledge\n",
     "HEIGHT, WIDTH = 256, 256\n",
-    "nets = ['Vgg16', 'MobileNet', 'ResNet50']\n",
-    "#nets = ['MobileNet']\n",
+    "nets = ['Vgg16', 'ResNet50']\n",
     "num_clases=2\n",
     "fine_tunning = False\n",
     "\n",
@@ -663,7 +669,7 @@
     "    tf.random.set_seed(42)\n",
     "    tf.keras.backend.clear_session()\n",
     "\n",
-    "    finetune_model = train_custom_layers(train_df_v2, test_df_v2, HEIGHT, WIDTH, arquitectura, num_clases, fine_tunning)"
+    "    finetune_model = train_custom_layers(train_df, test_df, HEIGHT, WIDTH, arquitectura, num_clases, fine_tunning)"
    ]
   },
   {
@@ -698,12 +704,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_rescale(img):\n",
-    "    return (img / 127.5) - 1.0\n",
+    "# def custom_rescale(img):\n",
+    "#     return (img / 127.5) - 1.0\n",
     "                                 \n",
     "def make_generator(df_test, HEIGHT, WIDTH, batch_size):\n",
     "    \n",
-    "    test_datagen=ImageDataGenerator(preprocessing_function=custom_rescale)\n",
+    "    test_datagen=ImageDataGenerator(rescale=1./255)#ImageDataGenerator(preprocessing_function=custom_rescale)\n",
     "    \n",
     "    test_generator=test_datagen.flow_from_dataframe(directory=None,\n",
     "                                                    dataframe=df_test,\n",
@@ -725,8 +731,8 @@
    "outputs": [],
    "source": [
     "#loading the model\n",
-    "name = \"MobileNet\"\n",
-    "model_path = '../models/embc/classifier/mri_spect/spect_preprocessed2/' + name + '.h5'\n",
+    "name = \"ResNet50\" #['Vgg16', 'ResNet50']\n",
+    "model_path = '../models/embc/classifier/mri_spect_stratified/raw/' + name + '.h5'\n",
     "model = keras.models.load_model(model_path, compile=True)"
    ]
   },
@@ -851,13 +857,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Until here**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Loading the PRODROMAL synthetic SPECT data**"
    ]
   },
@@ -882,7 +881,7 @@
    "source": [
     "#test\n",
     "test_df[['case_number', 'slice_number']] = test_df['path'].str.extract(r'_case_(\\d+)_slice_(\\d+).png').astype(int)\n",
-    "test_df_v2 = test_df[(test_df['slice_number'] > 32) & (test_df['slice_number'] < 50)]\n",
+    "test_df_v2 = test_df[(test_df['slice_number'] > 80) & (test_df['slice_number'] < 101)]\n",
     "test_df_v2.drop('slice_number', axis=1, inplace=True)\n",
     "test_df_v2.drop('case_number', axis=1, inplace=True)\n",
     "test_df_v2.groupby('label').count()"
@@ -973,7 +972,7 @@
    "outputs": [],
    "source": [
     "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/\"\n",
-    "test_prodromal_df = pd.read_csv(root_path+\"embc_extension/extension_pd_SPECT_fullRois_TEST.csv\", header=None)\n",
+    "test_prodromal_df = pd.read_csv(root_path+\"embc_extension_csvFiles/extension_pd_SPECT_fullRois_TEST.csv\", header=None)\n",
     "test_prodromal_df.columns = ['path', 'label']\n",
     "test_prodromal_df.groupby('label').count()\n",
     "test_df = test_prodromal_df"
@@ -1082,18 +1081,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
