--- a/notebooks/spectPreprocessing.ipynb
+++ b/notebooks/spectPreprocessing.ipynb
@@ -172,7 +172,7 @@
    "metadata": {},
    "source": [
     "**Main**\n",
-    "* For Parkinson and Control groups"
+    "* For Parkinson and Control groups "
    ]
   },
   {
@@ -200,17 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "39\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#getting all the related cases\n",
     "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered\"\n",
@@ -223,91 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3183\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3183/preprocessed2/3183_swedd_spect_mri_Reconstructed_DaTSCAN_20141007134635_2_resampled_gaussian.nii.gz\n",
-      "3189\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3189/preprocessed2/3189_swedd_spect_mri_Reconstructed_DaTSCAN_20150731131250_2_resampled_gaussian.nii.gz\n",
-      "3304\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3304/preprocessed2/3304_swedd_spect_mri_Reconstructed_DaTSCAN_20140515125029_2_resampled_gaussian.nii.gz\n",
-      "3319\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3319/preprocessed2/3319_swedd_spect_mri_Reconstructed_DaTSCAN_20140625154145_2_resampled_gaussian.nii.gz\n",
-      "3324\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3324/preprocessed2/3324_swedd_spect_mri_Reconstructed_DaTSCAN_20141119140110_2_resampled_gaussian.nii.gz\n",
-      "3326\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3326/preprocessed2/3326_swedd_spect_mri_Reconstructed_DaTSCAN_20150205141256_3_resampled_gaussian.nii.gz\n",
-      "3356\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3356/preprocessed2/3356_swedd_spect_mri_Reconstructed_DaTSCAN_20130619131608_3_resampled_gaussian.nii.gz\n",
-      "3379\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3379/preprocessed2/3379_swedd_spect_mri_Reconstructed_DaTSCAN_20120718150752_1_resampled_gaussian.nii.gz\n",
-      "3381\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3381/preprocessed2/3381_swedd_spect_mri_Reconstructed_DaTSCAN_20120801144656_1_resampled_gaussian.nii.gz\n",
-      "3384\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3384/preprocessed2/3384_swedd_spect_mri_Reconstructed_DaTSCAN_20150211150455_2_resampled_gaussian.nii.gz\n",
-      "3550\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3550/preprocessed2/3550_swedd_spect_mri_Reconstructed_DaTSCAN_20140304135714_2_resampled_gaussian.nii.gz\n",
-      "3566\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3566/preprocessed2/3566_swedd_spect_mri_Reconstructed_DaTSCAN_20140403144121_2_resampled_gaussian.nii.gz\n",
-      "3573\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3573/preprocessed2/3573_swedd_spect_mri_Reconstructed_DaTSCAN_20140318115928_2_resampled_gaussian.nii.gz\n",
-      "3580\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3580/preprocessed2/3580_swedd_spect_mri_Reconstructed_DaTSCAN_20140312114758_2_resampled_gaussian.nii.gz\n",
-      "3581\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3581/preprocessed2/3581_swedd_spect_mri_Reconstructed_DaTSCAN_20140314121113_2_resampled_gaussian.nii.gz\n",
-      "3582\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3582/preprocessed2/3582_swedd_spect_mri_Reconstructed_DaTSCAN_20140603081803_2_resampled_gaussian.nii.gz\n",
-      "3751\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3751/preprocessed2/3751_swedd_spect_mri_Reconstructed_DaTSCAN_20130619134707_2_resampled_gaussian.nii.gz\n",
-      "3755\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3755/preprocessed2/3755_swedd_spect_mri_Reconstructed_DaTSCAN_20130918143428_2_resampled_gaussian.nii.gz\n",
-      "3782\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3782/preprocessed2/3782_swedd_spect_mri_Reconstructed_DaTSCAN_20120704135233_1_resampled_gaussian.nii.gz\n",
-      "3783\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3783/preprocessed2/3783_swedd_spect_mri_Reconstructed_DaTSCAN_20141105145559_1_resampled_gaussian.nii.gz\n",
-      "3784\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3784/preprocessed2/3784_swedd_spect_mri_Reconstructed_DaTSCAN_20141022150708_2_resampled_gaussian.nii.gz\n",
-      "3790\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3790/preprocessed2/3790_swedd_spect_mri_Reconstructed_DaTSCAN_20150128141309_2_resampled_gaussian.nii.gz\n",
-      "3801\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3801/preprocessed2/3801_swedd_spect_mri_Reconstructed_DaTSCAN_20110524125728_1000_resampled_gaussian.nii.gz\n",
-      "3820\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3820/preprocessed2/3820_swedd_spect_mri_Reconstructed_DaTSCAN_20140513142201_2_resampled_gaussian.nii.gz\n",
-      "3821\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3821/preprocessed2/3821_swedd_spect_mri_Reconstructed_DaTSCAN_20140506130158_2_resampled_gaussian.nii.gz\n",
-      "3836\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3836/preprocessed2/3836_swedd_spect_mri_Reconstructed_DaTSCAN_20150210142640_2_resampled_gaussian.nii.gz\n",
-      "3860\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3860/preprocessed2/3860_swedd_spect_mri_Reconstructed_DaTSCAN_20140207141751_1_resampled_gaussian.nii.gz\n",
-      "3861\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3861/preprocessed2/3861_swedd_spect_mri_Reconstructed_DaTSCAN_20151104152830_2_resampled_gaussian.nii.gz\n",
-      "3862\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3862/preprocessed2/3862_swedd_spect_mri_Reconstructed_DaTSCAN_20140903143807_2_resampled_gaussian.nii.gz\n",
-      "3865\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3865/preprocessed2/3865_swedd_spect_mri_Reconstructed_DaTSCAN_20140425141536_2_resampled_gaussian.nii.gz\n",
-      "3871\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/3871/preprocessed2/3871_swedd_spect_mri_Reconstructed_DaTSCAN_20140418111401_2_resampled_gaussian.nii.gz\n",
-      "4023\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/4023/preprocessed2/4023_swedd_spect_mri_Reconstructed_DaTSCAN_20140610123406_1_resampled_gaussian.nii.gz\n",
-      "4031\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/4031/preprocessed2/4031_swedd_spect_mri_Reconstructed_DaTSCAN_20150121125955_3_resampled_gaussian.nii.gz\n",
-      "4036\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/4036/preprocessed2/4036_swedd_spect_mri_Reconstructed_DaTSCAN_20130212121820_1_resampled_gaussian.nii.gz\n",
-      "4060\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/4060/preprocessed2/4060_swedd_spect_mri_Reconstructed_DaTSCAN_20120405125555_1_resampled_gaussian.nii.gz\n",
-      "4064\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/4064/preprocessed2/4064_swedd_spect_mri_Reconstructed_DaTSCAN_20141209141835_2_resampled_gaussian.nii.gz\n",
-      "4066\n",
-      "output_file:  /home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/swedd/spect/4066/preprocessed2/4066_swedd_spect_mri_Reconstructed_DaTSCAN_20121227083448_1000_resampled_gaussian.nii.gz\n",
-      "done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for case in cases[2:]:\n",
     "    print(case)\n",
@@ -338,21 +248,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
